v2-website/versioned_docs/version-0.5/view-style-props.md
---
id: view-style-props
title: View Style Props
original_id: view-style-props
---

### Props

- [`borderTopColor`](view-style-props.md#bordertopcolor)
- [`backgroundColor`](view-style-props.md#backgroundcolor)
- [`borderBottomLeftRadius`](view-style-props.md#borderbottomleftradius)
- [`borderBottomRightRadius`](view-style-props.md#borderbottomrightradius)
- [`borderColor`](view-style-props.md#bordercolor)
- [`borderLeftColor`](view-style-props.md#borderleftcolor)
- [`borderRadius`](view-style-props.md#borderradius)
- [`borderRightColor`](view-style-props.md#borderrightcolor)
- [`borderBottomColor`](view-style-props.md#borderbottomcolor)
- [`borderTopLeftRadius`](view-style-props.md#bordertopleftradius)
- [`borderTopRightRadius`](view-style-props.md#bordertoprightradius)
- [`opacity`](view-style-props.md#opacity)
- [`overflow`](view-style-props.md#overflow)
- [`shadowColor`](view-style-props.md#shadowcolor)
- [`shadowOffset`](view-style-props.md#shadowoffset)
- [`shadowOpacity`](view-style-props.md#shadowopacity)
- [`shadowRadius`](view-style-props.md#shadowradius)

---

# Reference

## Props

### `borderTopColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `backgroundColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `borderBottomLeftRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderBottomRightRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `borderLeftColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `borderRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderRightColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `borderBottomColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `borderTopLeftRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `borderTopRightRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `opacity`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `overflow`

| Type                      | Required |
| ------------------------- | -------- |
| enum('visible', 'hidden') | No       |

---

### `shadowColor`

| Type   | Required |
| ------ | -------- |
| string | No       |

---

### `shadowOffset`

| Type                                   | Required |
| -------------------------------------- | -------- |
| object: {width: number,height: number} | No       |

---

### `shadowOpacity`

| Type   | Required |
| ------ | -------- |
| number | No       |

---

### `shadowRadius`

| Type   | Required |
| ------ | -------- |
| number | No       |
